tf_deploy_webfarm_with_remote_store/module/stack/igw.tf
#internet gw
resource "aws_internet_gateway" "dev" {
  vpc_id = aws_vpc.dev.id
  tags = {
    Name = join("_", [var.namespace, "igw"])
  }
}
